Use JxBrowser
Allows for transparent web views and makes sure that embedded websites
have less rendering issues. Also adds quite some weight to the client,
unfortunately.